--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,6 +15,7 @@ environment:
   global:
     DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
     DOTNET_CLI_TELEMETRY_OPTOUT: 1
+    IsFinalBuild: true
 test: off
 deploy: off
 artifacts:
