--- a/src/Digillect.AspNetCore.Authentication.Odnoklassniki/Digillect.AspNetCore.Authentication.Odnoklassniki.csproj
+++ b/src/Digillect.AspNetCore.Authentication.Odnoklassniki/Digillect.AspNetCore.Authentication.Odnoklassniki.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.3;net451</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup>
