--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,15 +1,13 @@
-version: 2.0.0-{build}
+version: 2.1.0-{build}
 init:
   - git config --global core.autocrlf true
 branches:
   only:
     - master
-    - release
     - dev
-    - /^(.*\/)?ci-.*$/
-    - /^rel\/.*/
+    - /^release\/.*/
 build_script:
-  - ps: .\build.ps1
+  - ps: .\run.ps1 default-build
 clone_depth: 1
 environment:
   global:
