--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,6 @@
+# EditorConfig is awesome: http://EditorConfig.org
+
+# top-most EditorConfig file
 root = true
 
 [*]
@@ -5,6 +8,10 @@ charset = utf-8
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+
+[*.md]
+indent_size = 4
+trim_trailing_whitespace = false
 
 [*.cs]
 indent_size = 4
