--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,8 @@ addons:
 branches:
   only:
     - master
-    - release
     - dev
-    - /^(.*\/)?ci-.*$/
-    - /^rel\/.*/
+    - /^release\/.*/
 before_install:
   - if test "$TRAVIS_OS_NAME" == "osx"; then brew update; brew install openssl; ln -s /usr/local/opt/openssl/lib/libcrypto.1.0.0.dylib /usr/local/lib/; ln -s /usr/local/opt/openssl/lib/libssl.1.0.0.dylib /usr/local/lib/; fi
 script:
