Preliminary version for ASP.NET Core 3.0

--- a/.editorconfig
+++ b/.editorconfig
@@ -3,17 +3,21 @@
 # top-most EditorConfig file
 root = true
 
+# Default settings
 [*]
 charset = utf-8
 indent_style = space
 insert_final_newline = true
 trim_trailing_whitespace = true
+# (Please don't specify an indent_size here; that has too many unintended consequences.)
 
 [*.md]
 indent_size = 4
 trim_trailing_whitespace = false
 
+# .NET
 [*.cs]
+charset = utf-8-bom
 indent_size = 4
 dotnet_sort_system_directives_first = true:warning
 csharp_prefer_braces = true:suggestion
@@ -27,15 +31,37 @@ csharp_space_between_parentheses = false
 csharp_preserve_single_line_statements = false
 csharp_preserve_single_line_blocks = true
 
-[*.{xml,config,*proj,nuspec,props,resx,targets,yml,tasks}]
-indent_size = 2
-
-[*.json]
-indent_size = 2
-
-[*.{ps1,psm1}]
+# Shell scripts
+[*.{bat,cmd}]
+end_of_line = crlf
 indent_size = 4
 
 [*.sh]
 end_of_line = lf
 indent_size = 4
+
+[*.{ps1,psm1}]
+charset = utf-8-bom
+indent_size = 4
+
+# Web
+[*.{css,html,js,json,yaml,yml}]
+indent_size = 2
+insert_final_newline = false
+
+# XML
+[*.{xml,xsl,xslt,xsd}]
+indent_size = 2
+insert_final_newline = false
+
+# Xml project files
+[*.*proj]
+charset = utf-8-bom
+indent_size = 2
+insert_final_newline = false
+
+# Xml config files
+[*.{props,targets,ruleset,Config,config,nuspec,pubxml,resx,vsixmanifest,vsct}]
+charset = utf-8-bom
+indent_size = 2
+insert_final_newline = false
