--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,4 @@
-version: 2.1.0-{build}
+version: 3.0.0-{build}
 init:
   - git config --global core.autocrlf true
 branches:
@@ -17,4 +17,4 @@ test: off
 deploy: off
 artifacts:
   - path: 'artifacts\build\*.nupkg'
-os: Visual Studio 2017
+os: Visual Studio 2019 Preview
