--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -1,12 +1,14 @@
 ﻿<Project>
+
+  <Import Project="..\Directory.Build.targets" />
+
   <PropertyGroup>
     <MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFileFullPath)</MSBuildAllProjects>
   </PropertyGroup>
 
-  <Import Project="..\Directory.Build.targets" />
-
   <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="JetBrains.Annotations" Version="$(JetBrainsAnnotationsPackageVersion)" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OAuth" Version="$(MicrosoftAspNetCoreAuthenticationOAuthPackageVersion)" />
   </ItemGroup>
+
 </Project>
